--- a/css/styles.css
+++ b/css/styles.css
@@ -5,22 +5,121 @@
 
 body {
     padding: 8px;
+    background-color: #181717;
+}
+
+.mobile-header {
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.header-logo svg {
+    display: flex;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: transparent;
+    z-index: 1;
+    height: 86px;
+    font-family: Barlow, sans-serif;
+    margin: 0 46px 0 46px;}
+
+.nav-list {
+    list-style-type: none;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 0;
+}
+
+.nav-list li {
+    display: flex;
+    justify-content: center;
+    margin: 30px;
+    cursor: pointer;
+}
+
+.nav-list li {
+    transition: color 0.3s ease;
+}
+
+.nav-list li:hover {
+    color: #b0aaaa;
+}
+
+.nav-list li a {
+    transition: color 0.3s ease;
+    text-decoration: none;
+    color: white;
+}
+
+.nav-list li a:hover {
+    color: #b0aaaa;
+}
+
+.nav-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.fa-user {
+    padding: 18px;
+}
+
+@media (min-width: 500px) {
+    .mobile-header {
+        display: none;
+    }
+}
+
+@media (min-width: 971px) {
+    .mobile-header {
+        display: flex;
+    }
 }
 
 #movie-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
-    gap: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 60px;
+    padding: 40px 0 0 0;
+}
+
+.img-div {
+    width: 306px;
+    height: 437px;
+    overflow: hidden;
 }
 
 .img-div img {
-    width: 200px;
-    height: 300px;
-    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
     border-radius: 8px;
 }
 
 .movie-link {
     text-decoration: none;
     color: black;
+}
+
+.movie-container {
+    color: white;
+}
+
+.title {
+    font-size: 20px;
+}
+
+.info-div {
+    padding: 10px 0 0 0;
 }
