added if else function to price and some css to the design

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,4 +122,59 @@ header {
 
 .info-div {
     padding: 10px 0 0 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.regular-price {
+    text-decoration: line-through;
+}
+
+#btnContainer {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+}
+
+.btn {
+    font-size: 16px;
+    width: 146px;
+    height: 38px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 46px;
+    border: 0;
+    color: white;
+    background-color: rgb(60, 60, 60);
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: rgb(127 123 123);
+    transition: 0.2s ease-in-out;
+}
+
+.img-div img {
+    transition: filter 0.4s ease;
+}
+
+.img-div:hover img {
+    filter: grayscale(100%);
+}
+
+footer {
+    padding: 60px 0 0 0;
+}
+
+.footer-div {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer span {
+    color: white;
 }
