--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,10 @@ header {
     font-size: 24px;
 }
 
+.plus-div i {
+    cursor: pointer;
+}
+
 .img-div {
     width: 306px;
     height: 437px;
@@ -201,3 +205,9 @@ footer {
 footer span {
     color: white;
 }
+
+.svg-icons {
+    display: flex;
+    gap: 8px;
+}
+
