--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ header {
     font-size: 24px;
 }
 
-.plus-div i {
+.button-div button {
     cursor: pointer;
 }
 
@@ -210,4 +210,31 @@ footer span {
     display: flex;
     gap: 8px;
 }
+
+.cart-dropdown {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 10px;
+    z-index: 10;
+    width: 318px;
+    height: 80%;
+}
+
+.cart-dropdown.show {
+    display: block;
+}
+
+.cart-dropdown {
+    display: none; /
+}
+
+.fa-x {
+    cursor: pointer;
+}
+
+
 
