--- a/css/checkout.css
+++ b/css/checkout.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: ;
+    font-family: Montserrat, sans-serif;
 }
 
 body {
@@ -121,9 +121,29 @@ footer span {
 
 #cartList {
     list-style-type: none;
+    padding: 0;
+    display: flex;
+    /* justify-content: center; */
+    flex-direction: column;
+    align-items: center;
 }
 
 #cartList li {
     display: flex;
     justify-content: center;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+}
+
+.total-sum {
+    display: flex;
+    justify-content: center;
+}
+
+.purchase-button {
+    width: 100px;
+    height: 26px;
 }
