--- a/css/checkout.css
+++ b/css/checkout.css
@@ -89,7 +89,7 @@ header {
 }
 
 footer {
-    padding: 60px 0 0 0;
+    padding: 120px 0 0 0;
 }
 
 .footer-div {
@@ -110,14 +110,15 @@ footer span {
 
 .checkout-container {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     color: white;
+    justify-content: space-between;
 }
 
 .checkout-overview {
     display: flex;
     justify-content: flex-start;
+    font-size: 28px;
 }
 
 #cartList {
@@ -125,10 +126,16 @@ footer span {
     padding: 0;
     display: flex;
     flex-direction: column;
+    gap: 18px;
 }
 
 #cartList li {
     display: flex;
+    font-size: 20px;
+}
+
+#cartList p {
+    font-size: 20px;
 }
 
 .button-container {
@@ -142,8 +149,14 @@ footer span {
 }
 
 .purchase-button {
-    width: 100px;
-    height: 26px;
+    width: 122px;
+    height: 34px;
+    background-color: #e07d1e;
+    border: 0;
+    border-radius: 4px;
+    font-size: 16px;
+    color: white;
+    cursor: pointer;
 }
 
 .body-container {
@@ -153,9 +166,10 @@ footer span {
 
 .vertical-line {
     width: 1px;
-    height: 100px;
+    height: 412px;
     background-color: white;
     margin: 0 100px 0 100px;
+    opacity: 0.7;
 }
 
 .form-div form {
@@ -183,7 +197,8 @@ footer span {
 .payment {
     display: flex;
     justify-content: flex-start;
-    font-size: 20px;
+    font-size: 28px;
+    padding-bottom: 42px;
 }
 
 #fname, #lname, #email {
