--- a/css/product-page.css
+++ b/css/product-page.css
@@ -126,3 +126,80 @@ footer span {
     display: flex;
     gap: 8px;
 }
+
+.cart-dropdown {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+    padding: 10px;
+    z-index: 10;
+    width: 438px;
+    height: 60%;
+    border-radius: 4px 0 0 4px;
+    box-shadow: 0 1px 6px rgba(227, 162, 66, 0.42);
+}
+
+.cart-dropdown.show {
+    display: block;
+}
+
+.cart-dropdown {
+    display: none;
+    position: fixed;
+}
+
+.fa-x {
+    cursor: pointer;
+    display: flex;
+}
+
+#cartItems {
+    list-style-type: none;
+    padding: 8px 0 4px 0;
+}
+
+#cartItems li {
+    padding: 8px 0 8px 0;
+}
+
+.hr-line {
+    border-top: 1px solid #00000036;
+    margin: 8px 0;
+}
+
+#viewDetailsButton {
+    position: absolute;
+    top: 90%;
+    border-radius: 4px;
+    border: 0;
+    width: 88px;
+    height: 28px;
+    color: white;
+    cursor: pointer;
+    background-color: rgb(60, 60, 60);;
+}
+
+#viewDetailsButton:hover {
+    background-color: rgb(127 123 123);
+    transition: 0.1s ease-in;
+}
+
+.cart-overview {
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.remove-button {
+    background-color: transparent;
+    border: 0;
+    font-size: 10px;
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+#totalCost {
+    position: absolute;
+    top: 84%;
+}
