--- a/css/checkout.css
+++ b/css/checkout.css
@@ -28,7 +28,8 @@ header {
     z-index: 1;
     height: 86px;
     font-family: Barlow, sans-serif;
-    margin: 0 46px 0 46px;}
+    margin: 0 46px 54px 46px;
+}
 
 .nav-list {
     list-style-type: none;
