--- a/css/product-page.css
+++ b/css/product-page.css
@@ -42,7 +42,7 @@ header {
 .nav-list li {
     display: flex;
     justify-content: center;
-    margin: 30px;
+    margin: 20px 96px 0 0;
     cursor: pointer;
 }
 
@@ -90,6 +90,7 @@ header {
 .img-container {
     display: flex;
     justify-content: center;
+    padding-bottom: 16px;
 }
 
 .img-container img {
@@ -98,7 +99,7 @@ header {
     width: 326px;
     height: auto;
     border-radius: 12px;
-    box-shadow: 2px 2px 4px 2px rgb(0 0 0 / 42%);
+    box-shadow: 0 0 5px 1px #ff98006e;
 }
 
 .movie-info {
@@ -106,6 +107,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 16px;
 }
 
 footer {
@@ -126,6 +128,7 @@ footer span {
 .svg-icons {
     display: flex;
     gap: 8px;
+    position: fixed;
 }
 
 .cart-dropdown {
@@ -203,4 +206,26 @@ footer span {
 #totalCost {
     position: absolute;
     top: 84%;
+}
+
+.movie-info p {
+    display: flex;
+    justify-content: center;
+    width: 482px;
+    text-align:left;
+}
+
+.add-to-cart-btn {
+    border-radius: 4px;
+    border: 0;
+    width: 140px;
+    height: 32px;
+    color: white;
+    cursor: pointer;
+    background-color: #e07d1e;
+}
+
+.add-to-cart-btn:hover {
+    transition: ease-in-out 2ms;
+    background-color: #96570b;
 }
