--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ header {
 .nav-list li {
     display: flex;
     justify-content: center;
-    margin: 30px;
+    margin: 20px 96px 0 0;
     cursor: pointer;
 }
 
@@ -129,6 +129,11 @@ header {
 }
 
 .button-div button:hover {
+    background-color: #96570b;
+    transition: 0.2ms ease-in;
+}
+
+.button-div button:hover {
     transition: ease-in-out 2ms;
 
 }
@@ -162,16 +167,19 @@ header {
 
 .title {
     font-size: 20px;
+    font-weight: 500;
 }
 
 .info-div {
     padding: 10px 0 0 0;
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
 
 .regular-price {
     text-decoration: line-through;
+    color: #f55959;
 }
 
 #btnContainer {
@@ -196,6 +204,11 @@ header {
 }
 
 .btn:hover {
+    background-color: #96570b;
+    transition: 0.2ms ease-in;
+}
+
+.btn:hover {
 
     transition: 0.2s ease-in-out;
 }
@@ -209,7 +222,7 @@ header {
 }
 
 footer {
-    padding: 60px 0 0 0;
+    padding: 90px 0 0 0;
 }
 
 .footer-div {
