--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,8 @@ header {
     cursor: pointer;
     opacity: 0.5;
     gap: 6px;
+    font-size: 1rem;
+    font-weight: 200;
 }
 
 .nav-list li:hover {
@@ -85,41 +87,83 @@ header {
 .carousel-container {
     position: relative;
     width: 100%;
-    height: 64vh;
+    height: 70vh;
     overflow: hidden;
 }
 
 .carousel {
     display: flex;
     height: 100%;
-    transition: transform 0.5s ease-in-out;
+    transition: transform 1.2s ease-in-out;
 }
 
-.carousel img {
+.slide {
+    position: relative;
+    min-width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.slide img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    flex-shrink: 0;
+    filter: opacity(0.6);
+}
+
+.content {
+    position: absolute;
+    top: 50%;
+    left: 8%;
+    color: white;
+    text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+}
+
+.content h3 {
+    font-size: 2.5rem;
+    margin: 0 0 10px 0;
+    filter: drop-shadow(2px 4px 6px black);
+}
+
+.content p {
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    letter-spacing: 2px;
+    filter: drop-shadow(2px 4px 6px black);
+}
+
+.content i {
+    font-size: 1.7rem;
+    color: #deb522;
+    padding: 0 4px 0 0;
 }
 
 button.prev, button.next {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
+    font-size: 30px;
+    padding: 0;
     border: none;
-    color: white;
-    padding: 20px;
-    cursor: pointer;
+    background: none;
+    color: black;
+    opacity: 0.5;
     z-index: 10;
 }
 
 button.prev {
-    left: 10px;
+    left: 20px;
+    cursor: pointer;
 }
 
 button.next {
-    right: 10px;
+    right: 20px;
+    cursor: pointer;
+}
+
+.prev i:hover, .next:hover {
+    color: white;
 }
 
 .pagination {
@@ -132,8 +176,8 @@ button.next {
 }
 
 .pagination .dot {
-    width: 15px;
-    height: 15px;
+    width: 10px;
+    height: 10px;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 50%;
     cursor: pointer;
@@ -143,8 +187,6 @@ button.next {
 .pagination .dot.active {
     background-color: white;
 }
-
-
 
 @media (min-width: 500px) {
     .mobile-header {
@@ -219,11 +261,6 @@ button.next {
     height: 100%;
     object-fit: fill;
     border-radius: 8px;
-}
-
-.fa-solid:hover {
-    transition: ease-in-out 0.2ms;
-    color: #75706c;
 }
 
 .movie-link {
