--- a/css/product-page.css
+++ b/css/product-page.css
@@ -1,3 +1,5 @@
+@import "header-footer.css";
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -9,85 +11,9 @@ body {
     background-color: #181717;
 }
 
-.mobile-header {
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.header-logo svg {
-    display: flex;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: transparent;
-    z-index: 1;
-    height: 86px;
-    font-family: Barlow, sans-serif;
-    margin: 0 46px 0 46px;
-}
-
-.header-container {
-    display: flex;
-    align-items: center;
-    gap: 24px;
-}
-
-.nav-list {
-    list-style-type: none;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    gap: 24px;
-    padding: 8px 0 0 0;
-}
-
-.nav-list li {
-    display: flex;
-    justify-content: center;
-    cursor: pointer;
-    opacity: 0.5;
-    gap: 6px;
-    font-size: 1rem;
-    font-weight: 200;
-}
-
-.nav-list li:hover {
-    opacity: 1;
-    transition: 0.3s ease;
-}
-
-.nav-icons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
-
-.fa-user {
-    padding: 18px;
-}
-
-@media (min-width: 500px) {
-    .mobile-header {
-        display: none;
-    }
-}
-
-@media (min-width: 971px) {
-    .mobile-header {
-        display: flex;
-    }
-}
-
 .product-container {
     display: flex;
-    padding: 34px 0 0 34px;
+    padding: 34px 0 0 20px;
 }
 
 .img-container {
@@ -98,7 +24,8 @@ header {
 .img-container img {
     display: flex;
     justify-content: center;
-    width: 326px;
+    width: 20vw;
+    min-width: 244px;
     height: auto;
     border-radius: 12px;
     box-shadow: 0 0 5px 1px #ff98006e;
@@ -109,8 +36,10 @@ header {
     display: flex;
     flex-direction: column;
     gap: 16px;
+    width: 328px;
     padding: 0 0 0 22px;
     align-self: center;
+    white-space: normal;
 }
 
 .movie-info i {
@@ -119,25 +48,17 @@ header {
     padding: 0 6px 0 0;
 }
 
-footer {
-    padding: 60px 0 0 0;
-}
+@media screen and (max-width: 750px) {
+    .product-container {
+        flex-direction: column;
+        padding: 34px 0;
+    }
 
-.footer-div {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-
-footer span {
-    color: white;
-}
-
-.svg-icons {
-    display: flex;
-    gap: 8px;
-    position: fixed;
+    .movie-info {
+        align-items: center;
+        text-align: center;
+        padding: 12px 0;
+    }
 }
 
 .cart-dropdown {
@@ -148,7 +69,8 @@ footer span {
     background-color: #fff;
     padding: 10px;
     z-index: 10;
-    width: 438px;
+    width: 26vw;
+    min-width: 318px;
     height: 60%;
     border-radius: 4px 0 0 4px;
     box-shadow: 0 1px 6px rgba(227, 162, 66, 0.42);
@@ -219,7 +141,6 @@ footer span {
 
 .movie-info p {
     display: flex;
-    width: 482px;
     align-items: center;
 }
 
