--- a/css/product-page.css
+++ b/css/product-page.css
@@ -42,6 +42,10 @@ body {
     white-space: normal;
 }
 
+.movie-info h2 {
+    font-size: 34px;
+}
+
 .movie-info i {
     font-size: 1.7rem;
     color: #deb522;
